# RubiksSolverRobot

./: CubeException.cpp  CubeException.h  CubeModel.cpp  CubieView.cpp  README.md
GUI_Solver/: CMakeLists.txt  CubeException.h  CubeModel.cpp  CubeModel.h  CubeView.cpp  CubieView.cpp  CubieView.h  FaceView.cpp  FaceView.h  RandomGenerator.h  RubiksCubeGUI_en_US.ts  Solver.cpp  Solver.h  cubeview.h  goalsingleton.cpp  goalsingleton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movesimplify.cpp  movesimplify.h
